src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__nested_generic_type_args.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 10,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 11,
                                        end: 15,
                                        start_line: 1,
                                        start_col: 12,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 11,
                                end: 15,
                                start_line: 1,
                                start_col: 12,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 17,
                                                    end: 20,
                                                    start_line: 1,
                                                    start_col: 18,
                                                },
                                            },
                                            args: Some(
                                                TypeArgs {
                                                    args: [
                                                        Type(
                                                            Type {
                                                                kind: Path(
                                                                    TypePath {
                                                                        segments: [
                                                                            TypePathSegment {
                                                                                name: Spanned {
                                                                                    node: SymbolU32 {
                                                                                        value: 3,
                                                                                    },
                                                                                    span: Span {
                                                                                        start: 21,
                                                                                        end: 24,
                                                                                        start_line: 1,
                                                                                        start_col: 22,
                                                                                    },
                                                                                },
                                                                                args: Some(
                                                                                    TypeArgs {
                                                                                        args: [
                                                                                            Type(
                                                                                                Type {
                                                                                                    kind: Path(
                                                                                                        TypePath {
                                                                                                            segments: [
                                                                                                                TypePathSegment {
                                                                                                                    name: Spanned {
                                                                                                                        node: SymbolU32 {
                                                                                                                            value: 4,
                                                                                                                        },
                                                                                                                        span: Span {
                                                                                                                            start: 25,
                                                                                                                            end: 28,
                                                                                                                            start_line: 1,
                                                                                                                            start_col: 26,
                                                                                                                        },
                                                                                                                    },
                                                                                                                    args: None,
                                                                                                                },
                                                                                                            ],
                                                                                                            span: Span {
                                                                                                                start: 25,
                                                                                                                end: 28,
                                                                                                                start_line: 1,
                                                                                                                start_col: 26,
                                                                                                            },
                                                                                                        },
                                                                                                    ),
                                                                                                    span: Span {
                                                                                                        start: 25,
                                                                                                        end: 28,
                                                                                                        start_line: 1,
                                                                                                        start_col: 26,
                                                                                                    },
                                                                                                },
                                                                                            ),
                                                                                        ],
                                                                                        span: Span {
                                                                                            start: 24,
                                                                                            end: 29,
                                                                                            start_line: 1,
                                                                                            start_col: 25,
                                                                                        },
                                                                                    },
                                                                                ),
                                                                            },
                                                                        ],
                                                                        span: Span {
                                                                            start: 21,
                                                                            end: 29,
                                                                            start_line: 1,
                                                                            start_col: 22,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 21,
                                                                    end: 29,
                                                                    start_line: 1,
                                                                    start_col: 22,
                                                                },
                                                            },
                                                        ),
                                                    ],
                                                    span: Span {
                                                        start: 20,
                                                        end: 30,
                                                        start_line: 1,
                                                        start_col: 21,
                                                    },
                                                },
                                            ),
                                        },
                                    ],
                                    span: Span {
                                        start: 17,
                                        end: 30,
                                        start_line: 1,
                                        start_col: 18,
                                    },
                                },
                            ),
                            span: Span {
                                start: 17,
                                end: 30,
                                start_line: 1,
                                start_col: 18,
                            },
                        },
                        span: Span {
                            start: 11,
                            end: 30,
                            start_line: 1,
                            start_col: 12,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 32,
                            end: 34,
                            start_line: 1,
                            start_col: 33,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 34,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 34,
        start_line: 1,
        start_col: 1,
    },
}
