src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__nested_generics_triple.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 6,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 12,
                                                end: 15,
                                                start_line: 1,
                                                start_col: 13,
                                            },
                                        },
                                        args: Some(
                                            TypeArgs {
                                                args: [
                                                    Type(
                                                        Type {
                                                            kind: Path(
                                                                TypePath {
                                                                    segments: [
                                                                        TypePathSegment {
                                                                            name: Spanned {
                                                                                node: SymbolU32 {
                                                                                    value: 2,
                                                                                },
                                                                                span: Span {
                                                                                    start: 16,
                                                                                    end: 19,
                                                                                    start_line: 1,
                                                                                    start_col: 17,
                                                                                },
                                                                            },
                                                                            args: Some(
                                                                                TypeArgs {
                                                                                    args: [
                                                                                        Type(
                                                                                            Type {
                                                                                                kind: Path(
                                                                                                    TypePath {
                                                                                                        segments: [
                                                                                                            TypePathSegment {
                                                                                                                name: Spanned {
                                                                                                                    node: SymbolU32 {
                                                                                                                        value: 2,
                                                                                                                    },
                                                                                                                    span: Span {
                                                                                                                        start: 20,
                                                                                                                        end: 23,
                                                                                                                        start_line: 1,
                                                                                                                        start_col: 21,
                                                                                                                    },
                                                                                                                },
                                                                                                                args: Some(
                                                                                                                    TypeArgs {
                                                                                                                        args: [
                                                                                                                            Type(
                                                                                                                                Type {
                                                                                                                                    kind: Path(
                                                                                                                                        TypePath {
                                                                                                                                            segments: [
                                                                                                                                                TypePathSegment {
                                                                                                                                                    name: Spanned {
                                                                                                                                                        node: SymbolU32 {
                                                                                                                                                            value: 3,
                                                                                                                                                        },
                                                                                                                                                        span: Span {
                                                                                                                                                            start: 24,
                                                                                                                                                            end: 27,
                                                                                                                                                            start_line: 1,
                                                                                                                                                            start_col: 25,
                                                                                                                                                        },
                                                                                                                                                    },
                                                                                                                                                    args: None,
                                                                                                                                                },
                                                                                                                                            ],
                                                                                                                                            span: Span {
                                                                                                                                                start: 24,
                                                                                                                                                end: 27,
                                                                                                                                                start_line: 1,
                                                                                                                                                start_col: 25,
                                                                                                                                            },
                                                                                                                                        },
                                                                                                                                    ),
                                                                                                                                    span: Span {
                                                                                                                                        start: 24,
                                                                                                                                        end: 27,
                                                                                                                                        start_line: 1,
                                                                                                                                        start_col: 25,
                                                                                                                                    },
                                                                                                                                },
                                                                                                                            ),
                                                                                                                        ],
                                                                                                                        span: Span {
                                                                                                                            start: 23,
                                                                                                                            end: 28,
                                                                                                                            start_line: 1,
                                                                                                                            start_col: 24,
                                                                                                                        },
                                                                                                                    },
                                                                                                                ),
                                                                                                            },
                                                                                                        ],
                                                                                                        span: Span {
                                                                                                            start: 20,
                                                                                                            end: 28,
                                                                                                            start_line: 1,
                                                                                                            start_col: 21,
                                                                                                        },
                                                                                                    },
                                                                                                ),
                                                                                                span: Span {
                                                                                                    start: 20,
                                                                                                    end: 28,
                                                                                                    start_line: 1,
                                                                                                    start_col: 21,
                                                                                                },
                                                                                            },
                                                                                        ),
                                                                                    ],
                                                                                    span: Span {
                                                                                        start: 19,
                                                                                        end: 29,
                                                                                        start_line: 1,
                                                                                        start_col: 20,
                                                                                    },
                                                                                },
                                                                            ),
                                                                        },
                                                                    ],
                                                                    span: Span {
                                                                        start: 16,
                                                                        end: 29,
                                                                        start_line: 1,
                                                                        start_col: 17,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 16,
                                                                end: 29,
                                                                start_line: 1,
                                                                start_col: 17,
                                                            },
                                                        },
                                                    ),
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 30,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                    },
                                ],
                                span: Span {
                                    start: 12,
                                    end: 30,
                                    start_line: 1,
                                    start_col: 13,
                                },
                            },
                        ),
                        span: Span {
                            start: 12,
                            end: 30,
                            start_line: 1,
                            start_col: 13,
                        },
                    },
                ),
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Array(
                                    List(
                                        [],
                                    ),
                                ),
                                span: Span {
                                    start: 33,
                                    end: 35,
                                    start_line: 1,
                                    start_col: 34,
                                },
                            },
                        ),
                        span: Span {
                            start: 31,
                            end: 37,
                            start_line: 1,
                            start_col: 32,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 37,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 37,
        start_line: 1,
        start_col: 1,
    },
}
